<resources>
    <string name="app_name">Ticketer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Login">Login</string>

    <string name="error_field_required">This field is required</string>

    <!-- Register Acitivity -->
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="enter_title_of_ticket">enter title of ticket</string>
    <string name="submit">submit</string>
    <string name="logout">logout</string>
    <string name="enter_ticket_description">enter ticket description</string>
    <string name="main_fragment_label">main fragment label</string>
    <string name="register_fragment_label">register fragment label</string>
    <string name="ticket_fragment_label">ticket fragment label</string>
    <string name="Login_fragment_label">login fragment label</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_button">Create Account</string>
    <string name="updateLocation">Update your Location</string>
    <string name="getLocation">Get a list of users latest location.</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="statusOfPermission">"Status of Permission: "</string>

<!--    Location-based Strings-->
    <string name="status">Location status</string>
    <string name="button_start">Start GPS</string>
    <string name="button_stop">Stop GPS</string>
    <string name="unknown">Unknown</string>
    <string name="provider_disabled">Location provider disabled</string>
    <string name="provider_enabled">Location provider enabled</string>
    <string name="provider_status_changed">Location provider status changed</string>
    <string name="permissions_denied">Location permissions denied</string>
    <string name="request_permission_title">Permission Request</string>
    <string name="request_permission_text">Need access to GPS</string>
    <string name="request_permission_positive">Allow</string>
</resources>
